--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : 来冠男.png
   name             : Guannan Lai
   pronouns         : # example: "she/her"  
   bio              : I am a student passionate about AI, and I welcome any opportunity for discussion!
