--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : 来冠男.png
-  name             : Guannan Lai
+  name             : "Guannan Lai（来冠男）"
   pronouns         : # example: "she/her"  
   bio              : I am a student passionate about AI, and I welcome any opportunity for discussion!
   location         : Chengdu, Sichuan, China
