--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : Guannan Lai's HomePage
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name Guannan Lai
 description              : &description "personal description"
 url                      : https://aignlai.github.io/
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
