--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,11 +5,11 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: /publications/
+  #- title: "Publications"
+  #  url: /publications/
 
-  - title: "Awards"
-    url: /awards/    
+  #- title: "Awards"
+  #  url: /awards/    
 
   #- title: "Teaching"
   #  url: /teaching/    
@@ -17,11 +17,11 @@ main:
   #- title: "Portfolio"
   #  url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  #- title: "Blog Posts"
+  #  url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  #- title: "CV"
+  #  url: /cv/
     
   #- title: "Guide"
   #  url: /markdown/
